# revenue-app

./: Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
airflow/: .env.dev  docker-compose.airflow.yml
airflow/dags/file_import/test_data/: Adyen_SAMPLE_payments_accounting_report.csv
backend/: .env  .env.dev  docker-compose.yml
backend/src/: .flake8  dockerfile  manage.py  pyproject.toml
backend/src/import/: models.py
backend/src/management/: create_superuser.py
backend/src/payment/: admin.py  models.py  serializers.py  tests.py  views.py
backend/src/payment/commands/: populate_settlements.py
backend/src/payment/fixtures/: sample_data.json
backend/src/payment/migrations/: 0001_initial.py  0002_eventrefund.py  0003_eventsettlements.py  0004_eventsettlement_delete_eventsettlements.py
backend/src/reconciliation/: tests.py
backend/src/revenueApp/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: dockerfile  jest.config.js  package-lock.json  package.json
frontend/src/: App.js  App.test.js  theme.js
frontend/src/components/: header.js  sidebar.js
k8s/: frontend-deployment.yaml
